# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  21 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: fixed an
  error where --emptytree mode wouldn't really have a fully empty tree,
  due to the emptytree.inject() coming before the emptytree.root=None;
  the inject() caused a recalc of the USE vars, which caused the tree
  to become partially populated and it wasn't cleared.  This closes bug
  #1897.
  
  21 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: package
  building now executes the "setup" stage along with the unpack, compile,
  install stages so that global variables can be shared.  This fixes an issue
  with woodchip's new apache ebuild and closes bug #1813.

*portage-1.9.1 

*portage-1.9.0 (16 Apr 2002)

  16 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: fetching
  should now try *all* alternate download locations, closing bug #1544. 
  Yay!
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: "emerge R" now
  works correctly, closing bug #1094.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: ebuild.sh: *'s and ?'s in
  DEPEND and SRC_URI syntax should no longer get glob-expanded to files in
  /usr/portage.  This fixes some cryptic bugs.  It also closes bug #1473.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: emerge --debug
  now works again.  Closes bug #1437.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: moved argument
  check to the beginning of the doebuild() function to prevent "ebuild
  foo.ebuild fart" from causing the md5sums to be checked before recognizing
  that "fart" is not a valid command.  Closes bug #1823.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: 'USE="-foo"
  emerge bar' should now work correctly and consistently.  Fixes to the config
  class.  Closes bug #1455.
  